src/objects/SBQQ__TermCondition__c.object
<CustomObject>
    <fields>
        <fullName>cpqma_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>CPQ External Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteTermExternalId__c</fullName>
        <formula>SBQQ__QuoteTerm__r.cpqma_ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuoteTermExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestVariableExternalId__c</fullName>
        <formula>SBQQ__TestedVariable__r.cpqma_ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestVariableExternalId</label>
        <type>Text</type>
    </fields>
</CustomObject>